--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -86,6 +86,13 @@
             android:targetClass="com.tmobile.themechooser.ThemeChooser" />
     </header>
 
+    <!-- System UI -->
+    <header
+        android:id="@+id/system_settings"
+        android:icon="@drawable/ic_settings_system"
+        android:fragment="com.android.settings.cyanogenmod.SystemUiSettings"
+        android:title="@string/system_settings_title" />
+
     <!-- crDroid custom settings -->
     <header
         android:id="@+id/interface_settings"
