--- a/res/xml/init_d.xml
+++ b/res/xml/init_d.xml
@@ -42,6 +42,71 @@
             android:key="file_system_speedups"
             android:summary="@string/ps_file_system_speedups"
             android:title="@string/pt_file_system_speedups" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="battery"
+            android:summary="@string/ps_battery"
+            android:title="@string/pt_battery" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="touch"
+            android:summary="@string/ps_touch"
+            android:title="@string/pt_touch" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="minfree"
+            android:summary="@string/ps_minfree"
+            android:title="@string/pt_minfree" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="gpurender"
+            android:summary="@string/ps_gpurender"
+            android:title="@string/pt_gpurender" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="sleepers"
+            android:summary="@string/ps_sleepers"
+            android:title="@string/pt_sleepers" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="journalism"
+            android:summary="@string/ps_journalism"
+            android:title="@string/pt_journalism" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="sqlite3"
+            android:summary="@string/ps_sqlite3"
+            android:title="@string/pt_sqlite3" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="wifisleep"
+            android:summary="@string/ps_wifisleep"
+            android:title="@string/pt_wifisleep" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="iostats"
+            android:summary="@string/ps_iostats"
+            android:title="@string/pt_iostats" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="setrenice"
+            android:summary="@string/ps_setrenice"
+            android:title="@string/pt_setrenice" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="tweaks"
+            android:summary="@string/ps_tweaks"
+            android:title="@string/pt_tweaks" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="speedy_modified"
+            android:summary="@string/ps_speedy_modified"
+            android:title="@string/pt_speedy_modified" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="loopy_smoothness_tweak"
+            android:summary="@string/ps_loopy_smoothness_tweak"
+            android:title="@string/pt_loopy_smoothness_tweak" />
     </PreferenceCategory>
 
 </PreferenceScreen>
