--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -100,6 +100,13 @@
         android:title="@string/crdroid_settings_title" 
 	android:icon="@drawable/ic_settings_applications" />
 
+    <!-- HALO -->
+    <header
+        android:id="@+id/halo_settings"
+        android:fragment="com.android.settings.crdroid.Halo"
+        android:icon="@drawable/ic_settings_halo" 
+        android:title="@string/halo_settings_title" />
+
     <!-- DEVICE -->
     <header android:id="@+id/device_section"
         android:title="@string/header_category_device" />
@@ -184,7 +191,7 @@
         android:icon="@drawable/ic_settings_profiles"
         android:fragment="com.android.settings.profiles.ProfilesSettings"
         android:title="@string/profiles_settings_title" />
-
+    
     <!-- Location -->
     <header
         android:fragment="com.android.settings.location.LocationSettings"
