--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -17,28 +17,34 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/themes_settings_title" >
     
-    <CheckBoxPreference
-        android:key="lockscreen_eight_targets"
-        android:title="@string/lockscreen_eight_targets_title"
-        android:summary="@string/lockscreen_eight_targets_summary" />
 
-    <Preference
-        android:fragment="com.android.settings.crdroid.LockscreenTargets"
-        android:key="lockscreen_targets"
-        android:summary="@string/lockscreen_target_summary"
-        android:title="@string/lockscreen_target_title" />
+    <PreferenceCategory
+        android:title="@string/title_general"
+        android:key="lockscreen_general_category" >
+        <CheckBoxPreference
+            android:key="lockscreen_eight_targets"
+            android:title="@string/lockscreen_eight_targets_title"
+            android:summary="@string/lockscreen_eight_targets_summary" />
 
-    <PreferenceScreen
-             android:key="lockscreen_shortcuts"
-             android:fragment="com.android.settings.crdroid.dslv.ButtonsListViewSettings"
-             android:summary="@string/lockscreen_shortcuts_summary"
-             android:title="@string/lockscreen_shortcuts_title">
-         <extra android:name="buttonMode" android:value="4" />
-         <extra android:name="maxAllowedButtons" android:value="5" />
-         <extra android:name="disableLongpress" android:value="true" />
-         <extra android:name="useAppPickerOnly" android:value="true" />
-         <extra android:name="fragment" android:value="com.android.settings.crdroid.fragments.LockscreenShortcutFragment" />
-    </PreferenceScreen>
+        <Preference
+            android:fragment="com.android.settings.crdroid.LockscreenTargets"
+            android:key="lockscreen_targets"
+            android:summary="@string/lockscreen_target_summary"
+            android:title="@string/lockscreen_target_title" />
+
+        <PreferenceScreen
+                 android:key="lockscreen_shortcuts"
+                 android:fragment="com.android.settings.crdroid.dslv.ButtonsListViewSettings"
+                 android:summary="@string/lockscreen_shortcuts_summary"
+                 android:title="@string/lockscreen_shortcuts_title">
+             <extra android:name="buttonMode" android:value="4" />
+             <extra android:name="maxAllowedButtons" android:value="5" />
+             <extra android:name="disableLongpress" android:value="true" />
+             <extra android:name="useAppPickerOnly" android:value="true" />
+             <extra android:name="fragment" android:value="com.android.settings.crdroid.fragments.LockscreenShortcutFragment" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/lockscreen_widgets_category_title"
