--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -3,8 +3,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- About phone screen, crDroid version -->
-    <string name="crdroid_version_title">crDroid version</string>
-    <string name="crdroid_version_default">Build 4</string>
+    <string name="crdroid_version_title">Validus 13 Version</string>
+    <string name="crdroid_version_default">Build 1.6</string>
 
     <!-- General strings -->
     <string name="reset">Reset</string>
@@ -17,7 +17,7 @@
     <string name="style_title">Style</string>
 
     <!-- crDroid settings screens -->
-    <string name="crdroid_settings_title">crDroid customs</string>
+    <string name="crdroid_settings_title">The Void</string>
 
     <!-- Alerts and warnings headers -->
     <string name="alerts_and_warnings_title">Alerts and warnings</string>
@@ -316,7 +316,7 @@
     <!-- Navigation settings -->
     <string name="navigation_settings_options_title">Navigation options</string>
     <string name="navigation_settings_title">Navigation</string>
-    <string name="power_menu_title">Global menu</string>
+    <string name="power_menu_title">Power Menu</string>
 
     <!-- Power menu -->
     <string name="power_menu_style_summary">Change global menu colors</string>
