--- a/res/xml/crdroid_settings.xml
+++ b/res/xml/crdroid_settings.xml
@@ -4,6 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/crdroid_settings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+   <!-- Trying Something -->
+    <PreferenceScreen android:key="the_void"
+                      android:layout="@layout/the_void" />	
 
     <PreferenceScreen
         android:key="status_bar"
