TRDS port try (1/1)
Gonna give it a shot

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -207,6 +207,9 @@
 
     <!-- Safe headset volume restore checkbox -->
     <string name="safe_headset_volume_title">Safe headset volume</string>
+	
+	<!-- TRDS Settings -->
+    <string name="trds_settings_title">Dark UI (TRDS)</string>
 
     <!-- Waiver -->
     <string name="cyanogenmod_waiver_title">Waiver</string>
