--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -209,7 +209,7 @@
     <string name="safe_headset_volume_title">Safe headset volume</string>
 	
 	<!-- TRDS Settings -->
-    <string name="trds_settings_title">Dark UI (TRDS)</string>
+    <string name="trds_settings_title">Dark Symmetry</string>
 
     <!-- Waiver -->
     <string name="cyanogenmod_waiver_title">Waiver</string>
