--- a/res/xml/performance_settings.xml
+++ b/res/xml/performance_settings.xml
@@ -18,7 +18,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/performance_settings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-
+   <!-- Performance Logo -->
+    <PreferenceScreen android:key="pc_logo"
+                      android:layout="@layout/pc_logo" />  
+	
     <PreferenceScreen
         android:key="processor"
         android:fragment="com.android.settings.cyanogenmod.Processor"
